--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,34 +34,25 @@
         </dependency>
 
 
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-        </dependency>
-
-
         <dependency>
             <groupId>org.asynchttpclient</groupId>
             <artifactId>async-http-client</artifactId>
             <version>3.0.0.Beta3</version>
         </dependency>
+        <dependency>
+            <groupId>franzli347.project</groupId>
+            <artifactId>api</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>franzli347.project</groupId>
+            <artifactId>impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
+
+
 
 </project>
