--- a/register-center/api/pom.xml
+++ b/register-center/api/pom.xml
@@ -7,9 +7,10 @@
         <groupId>franzli347.project</groupId>
         <artifactId>franzGateway</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>common</artifactId>
+    <artifactId>api</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -18,22 +19,12 @@
     </properties>
 
     <dependencies>
-
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>franzli347.project</groupId>
+            <artifactId>common</artifactId>
+            <version>${version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-            <version>2.0.15</version>
-        </dependency>
-
-
-
-
     </dependencies>
+
 
 </project>
