--- a/register-center/impl/pom.xml
+++ b/register-center/impl/pom.xml
@@ -7,32 +7,38 @@
         <groupId>franzli347.project</groupId>
         <artifactId>franzGateway</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>common</artifactId>
+    <artifactId>impl</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
 
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>franzli347.project</groupId>
+            <artifactId>common</artifactId>
+            <version>${version}</version>
+
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-            <version>2.0.15</version>
+            <groupId>franzli347.project</groupId>
+            <artifactId>api</artifactId>
+            <version>${version}</version>
+
         </dependency>
 
-
-
+        <!--引入nacos的客户端依赖-->
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.0.4</version>
+        </dependency>
 
     </dependencies>
 
