--- a/config-center/config-center-impl/pom.xml
+++ b/config-center/config-center-impl/pom.xml
@@ -3,19 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <parent>
         <groupId>franzli347.project</groupId>
         <artifactId>franzGateway</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <artifactId>core</artifactId>
+    
+    <groupId>franzli347.project</groupId>
+    <artifactId>config-center-impl</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netty.version>4.1.51.Final</netty.version>
     </properties>
 
 
@@ -25,42 +27,22 @@
             <groupId>franzli347.project</groupId>
             <artifactId>common</artifactId>
             <version>${version}</version>
-        </dependency>
 
-        <!-- <dependency>
-            <groupId>franzli347.project</groupId>
-            <artifactId>config-center-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency> -->
-
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>${netty.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.asynchttpclient</groupId>
-            <artifactId>async-http-client</artifactId>
-            <version>3.0.0.Beta3</version>
         </dependency>
 
         <dependency>
             <groupId>franzli347.project</groupId>
             <artifactId>config-center-api</artifactId>
             <version>${version}</version>
+
         </dependency>
 
+        <!--引入nacos的客户端依赖-->
         <dependency>
-            <groupId>franzli347.project</groupId>
-            <artifactId>config-center-impl</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.0.4</version>
         </dependency>
-
 
     </dependencies>
-
-
-
 </project>
