--- a/register-center/register-center-impl/pom.xml
+++ b/register-center/register-center-impl/pom.xml
@@ -28,8 +28,8 @@
 
         <dependency>
             <groupId>franzli347.project</groupId>
-            <artifactId>api</artifactId>
-            <version>${version}</version>
+            <artifactId>register-center-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
 
         </dependency>
 
